--- a/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
+++ b/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
@@ -33,11 +33,11 @@ body {
 .view-exhibitors,
 .view-sponsors-12x {
   .views-row {
-    padding: 40px;
+    padding-top: 40px;
     clear: both;
   }
   .views-row-first {
-    padding: 0;
+    padding-top: 0;
   }
   .views-field {
     margin-bottom: 10px;
